# SelfawareMonopoly

./: .gitignore  .gitmodules  .travis.yml  README.md  docker-compose.yml
prototypes/API/rest_client/tests/rest-test/: CMakeLists.txt  main.cpp
prototypes/API/rest_client/tests/rest-test/test-utils/: MockRestServer.cpp
prototypes/API/rest_client/tests/rest-test/tests/: base_tests.cpp
server/: .gitignore  CMakeLists.txt  CMakelists.txt  Dockerfile  README.md  ci_test.sh
server/assets/boards/: berlin.json  berlin_de.json  berlin_en.json
server/buildscripts/: .gitignore  build.bat  configure.bat.in  default.bat  open.bat
server/certs/: Readme.md  localhost.crt  localhost.key
server/cmake/: CompileOptions.cmake
server/source/server/: CMakeLists.txt  main.cpp
server/source/serverlib/: CMakeLists.txt  accountmodel.cpp  accountmodel.h  configuration.cpp  configuration.h  database.cpp  fileserver.cpp  game.cpp  game.h  gamestate.cpp  gamestate.h  lobby.cpp  lobby.h  overview.cpp  overview.h  overviewstate.cpp  overviewstate.h  request.cpp  request.h  route.cpp  route.h  websocketserver.cpp  websocketserver.h
server/source/serverlib/actions/: action.h  createaccount.cpp  createaccount.h  creategame.cpp  creategame.h  endturn.cpp  endturn.h  gameaction.cpp  gameaction.h  gamestart.cpp  gamestart.h  gamewatcher.cpp  gamewatcher.h  joingame.cpp  joingame.h  lobbywatcher.cpp  lobbywatcher.h  playerready.cpp  playerready.h  rolldice.cpp  rolldice.h  watcher.h
server/source/serverlib/connections/: connection.cpp  connection.h  connectionfactory.cpp  connectionfactory.h  gameconnection.cpp  gameconnection.h  lobbyconnection.cpp  lobbyconnection.h  overviewconnection.cpp  overviewconnection.h
server/source/serverlib/fileserver/: fileserver.cpp  fileserver.h  request.cpp
server/source/serverlib/game/: board.cpp  board.h  card.h  cardstack.cpp  cardstack.h  dices.cpp  dices.h  game.cpp  game.h  gameinfo.cpp  gameinfo.h  gamelogic.cpp  gamelogic.h  jail.cpp  jail.h  player.cpp  player.h  watson.cpp  watson.h
server/source/serverlib/game/bank/: account.h  bank.cpp  bank.h  bankaccount.cpp  bankaccount.h
server/source/serverlib/game/board/: board.cpp  board.h  cardfield.cpp  cardfield.h  field.cpp  field.h  fieldfactory.cpp  fieldfactory.h  gotojail.cpp  gotojail.h  ownablefield.cpp  ownablefield.h  start.cpp  start.h  station.cpp  station.h  street.cpp  street.h  taxfield.cpp  taxfield.h  utility.cpp  utility.h
server/source/serverlib/game/stages/: endstage.cpp  endstage.h  initstage.cpp  initstage.h  runstage.cpp  runstage.h  stage.cpp  stage.h
server/source/serverlib/game/state/: active.cpp  active.h  dead.cpp  dead.h  endstate.cpp  endstate.h  enter.cpp  enter.h  gamestate.cpp  gamestate.h  initstate.cpp  initstate.h  passive.cpp  passive.h  runstate.cpp  runstate.h  state.h
server/source/serverlib/game/state/active/: activeaction.h  bankrupt.cpp  bankrupt.h  buddhist.h  field.cpp  field.h  free.cpp  free.h  freestate.cpp  freestate.h  jailstate.cpp  jailstate.h  movestate.cpp  movestate.h  pay.cpp  pay.h  playerstate.cpp  playerstate.h  (+6 more)
server/source/serverlib/game/turn/: buystate.cpp  buystate.h  endstate.cpp  endstate.h  freestate.cpp  freestate.h  idlestate.cpp  idlestate.h  initstate.cpp  initstate.h  jailbuyoutstate.cpp  jailbuyoutstate.h  jailstate.cpp  jailstate.h  movestate.cpp  movestate.h  paystate.cpp  paystate.h  possiblerequest.cpp  possiblerequest.h  rollstate.cpp  rollstate.h  startstate.cpp  startstate.h  turnstate.cpp  turnstate.h
server/source/serverlib/models/: accountmodel.cpp  accountmodel.h  boardmodel.cpp  boardmodel.h  gamemodel.cpp  gamemodel.h  gamestate.cpp  gamestate.h
server/source/serverlib/network/: connectionrequest.cpp  connectionrequest.h  request.cpp  request.h  websocketserver.cpp  websocketserver.h
server/source/serverlib/rest_apis/: coinhive.cpp  coinhive.h  restAPIsBase.cpp  restAPIsBase.h
server/source/serverlib/routes/: game.cpp  game.h  gameroute.cpp  gameroute.h  lobby.cpp  lobby.h  lobbyroute.cpp  lobbyroute.h  overview.cpp  overview.h  overviewroute.cpp  overviewroute.h  playercommunication.cpp  playercommunication.h  route.cpp  route.h  routefactory.cpp  routefactory.h
server/source/serverlib/utils/: budhist.h  configuration.cpp  configuration.h  database.cpp  database.h  exception.cpp  exception.h  program.cpp  program.h  ringbuffer.h  staticstorage.h
server/source/serverlib/watchers/: gamewatcher.cpp  gamewatcher.h  lobbywatcher.cpp  lobbywatcher.h  watcher.cpp  watcher.h
server/tests/: CMakeLists.txt
server/tests/rest-test/: CMakeLists.txt  main.cpp
server/tests/rest-test/test-utils/: MockBasicRestServer.cpp  MockBasicRestServer.h  MockCoinhiveServer.cpp  MockCoinhiveServer.h  MockRestServer.cpp  MockRestServer.h
server/tests/rest-test/tests/: base_test.cpp  base_tests.cpp  coinhiveMiner_test.cpp
server/tests/server-test/: CMakeLists.txt  lobby_test.cpp  main.cpp  mocked_database.cpp  mocked_database.h  mocked_server.cpp  overview_test.cpp  request_test.cpp
server/tests/server-test/test_utils/: helpers.cpp  helpers.h  mocked_database.cpp  mocked_database.h  mocked_server.cpp  mocked_server.h
server/tests/server-test/tests/: bank_test.cpp  bankaccount_test.cpp  board_test.cpp  boardmodel_test.cpp  buystate_test.cpp  configuration_test.cpp  connection_test.cpp  dices_test.cpp  exception_test.cpp  field_test.cpp  fieldfactory_test.cpp  game_test.cpp  gameconnection_test.cpp  gameinfo_test.cpp  gamemodel_test.cpp  gameroute_test.cpp  gotojail_test.cpp  idlestate_test.cpp  initstate_test.cpp  jailbuyoutstate_test.cpp  jailstate_test.cpp  jailstate_test_prime_paths.cpp  lobby_test.cpp  movestate_test.cpp  overview_test.cpp  paystate_test.cpp  rent_test.cpp  rent_test_idm.cpp  request_test.cpp  rollstate_test.cpp  route_test.cpp  runstage_test.cpp  runstate_test.cpp  startstage_test.cpp  startstate_test.cpp  station_test.cpp  street_test.cpp  taxfield_test.cpp  utility_test.cpp  watson_test.cpp  (+1 more)
server/tests/server-test/tests/state/: field_test.cpp  pay_test.cpp  reborn_test.cpp  roll_test.cpp
(+109 files in other folders)
